[gd_scene load_steps=14 format=3 uid="uid://bmqxjsjsnf14c"]

[ext_resource type="PackedScene" uid="uid://d3gioiclnkwjn" path="res://escenas/niveles/nivel.tscn" id="1_ni4m5"]
[ext_resource type="PackedScene" uid="uid://c4p47ic3duy58" path="res://escenas/npcs/police.tscn" id="2_6x7bv"]
[ext_resource type="Script" path="res://escenas/niveles/tutorial.gd" id="2_saiao"]
[ext_resource type="PackedScene" uid="uid://ct0h1iyfj7620" path="res://escenas/enemigos/gallina.tscn" id="3_308ba"]
[ext_resource type="PackedScene" uid="uid://b1q3uxxktsbpl" path="res://escenas/guerreros/ba√±o_quimico.tscn" id="5_0bpvy"]
[ext_resource type="PackedScene" uid="uid://c0qmhamoxp1jk" path="res://escenas/niveles/area_valida.tscn" id="6_adc5i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jq6s5"]
size = Vector2(92.1164, 13.9214)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjulx"]
size = Vector2(85, 11.3142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_visar"]
size = Vector2(586, 223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dw2y"]
size = Vector2(32, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksevg"]
size = Vector2(87.125, 411)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wx7ke"]
size = Vector2(2.1875, 136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1oom"]
size = Vector2(20, 118)

[node name="Tutorial" instance=ExtResource("1_ni4m5")]
script = ExtResource("2_saiao")

[node name="TileMap" parent="." index="0"]
layer_0/name = "AbajoDelTodo"
layer_0/tile_data = PackedInt32Array(0, 589824, 7, 65536, 589824, 7, 131072, 589824, 7, 196608, 589824, 7, 262144, 589824, 7, 327680, 589824, 7, 393216, 589824, 7, 458752, 589824, 7, 524288, 589824, 7, 589824, 589824, 7, 655360, 589824, 7, 720896, 589824, 7, 786432, 589824, 7, 851968, 589824, 7, 1, 589824, 7, 65537, 589824, 7, 131073, 589824, 7, 196609, 589824, 7, 262145, 589824, 7, 327681, 589824, 7, 393217, 589824, 7, 458753, 589824, 7, 524289, 589824, 7, 589825, 589824, 7, 655361, 589824, 7, 720897, 589824, 7, 786433, 589824, 7, 851969, 589824, 7, 2, 589824, 7, 65538, 720896, 8, 131074, 589824, 7, 196610, 589824, 7, 262146, 720896, 8, 327682, 720896, 8, 393218, 720896, 8, 458754, 720896, 8, 524290, 720896, 8, 589826, 720896, 8, 655362, 589824, 7, 720898, 720896, 8, 786434, 589824, 7, 851970, 589824, 7, 393219, 589824, 7, 458755, 589824, 7, 524291, 589824, 7, 589827, 720896, 8, 655363, 589824, 7, 720899, 720896, 8, 786435, 589824, 7, 851971, 589824, 7, 4, 262144, 8, 65540, 262144, 8, 131076, 262144, 8, 196612, 262144, 8, 262148, 262144, 8, 393220, 589824, 7, 458756, 589824, 7, 524292, 720896, 8, 589828, 720896, 8, 655364, 720896, 8, 720900, 1966080, 2, 786436, 589824, 7, 851972, 589824, 7, 262149, 262144, 8, 393221, 589824, 7, 458757, 720896, 8, 524293, 720896, 8, 589829, 589824, 7, 655365, 589824, 7, 720901, 589824, 7, 786437, 589824, 7, 851973, 720896, 8, 6, 589824, 7, 65542, 589824, 7, 131078, 589824, 7, 262150, 262144, 8, 393222, 720896, 8, 458758, 720896, 8, 524294, 589824, 7, 589830, 720896, 8, 655366, 589824, 7, 720902, 720896, 8, 786438, 589824, 7, 851974, 720896, 8, 7, 589824, 7, 65543, 589824, 7, 131079, 589824, 7, 262151, 1900544, 3, 393223, 720896, 8, 458759, 720896, 8, 524295, 720896, 8, 589831, 589824, 7, 655367, 589824, 7, 720903, 720896, 8, 786439, 589824, 7, 851975, 720896, 8, 8, 589824, 7, 65544, 589824, 7, 131080, 589824, 7, 262152, 262144, 8, 393224, 589824, 7, 458760, 589824, 7, 524296, 589824, 7, 589832, 589824, 7, 655368, 720896, 8, 720904, 720896, 8, 786440, 589824, 7, 851976, 589824, 7, 9, 589824, 7, 65545, 589824, 7, 131081, 720896, 8, 262153, 262144, 8, 393225, 720896, 8, 458761, 589824, 7, 524297, 589824, 7, 589833, 589824, 7, 655369, 589824, 7, 720905, 720896, 8, 786441, 589824, 7, 851977, 589824, 7, 10, 589824, 7, 65546, 589824, 7, 131082, 589824, 7, 262154, 262144, 8, 393226, 720896, 8, 458762, 589824, 7, 524298, 720896, 8, 589834, 589824, 7, 655370, 589824, 7, 720906, 589824, 7, 786442, 589824, 7, 851978, 589824, 7, 11, 589824, 7, 65547, 1966080, 3, 131083, 262144, 8, 262155, 262144, 8, 393227, 720896, 8, 458763, 589824, 7, 524299, 589824, 7, 589835, 589824, 7, 655371, 589824, 7, 720907, 589824, 7, 786443, 589824, 7, 851979, 589824, 7, 12, 589824, 7, 65548, 262144, 8, 131084, 262144, 8, 262156, 262144, 8, 393228, 589824, 7, 458764, 589824, 7, 524300, 589824, 7, 589836, 720896, 8, 655372, 720896, 8, 720908, 720896, 8, 786444, 589824, 7, 851980, 589824, 7, 13, 589824, 7, 65549, 262144, 8, 131085, 262144, 8, 196621, 589824, 7, 262157, 589824, 12, 327693, 589824, 12, 393229, 720896, 8, 458765, 589824, 7, 524301, 589824, 7, 589837, 720896, 8, 655373, 720896, 8, 720909, 589824, 7, 786445, 589824, 7, 851981, 589824, 7, 14, 589824, 7, 65550, 262144, 8, 131086, 262144, 8, 196622, 720896, 8, 262158, 589824, 7, 327694, 589824, 7, 393230, 720896, 8, 458766, 589824, 7, 524302, 589824, 7, 589838, 589824, 7, 655374, 720896, 8, 720910, 589824, 7, 786446, 589824, 7, 851982, 589824, 7, 15, 589824, 7, 65551, 262144, 8, 131087, 1900544, 3, 196623, 262144, 8, 262159, 262144, 8, 327695, 262144, 8, 393231, 262144, 8, 458767, 589824, 7, 524303, 589824, 7, 589839, 720896, 8, 655375, 589824, 7, 720911, 589824, 7, 786447, 589824, 7, 851983, 589824, 7, 16, 589824, 7, 65552, 262144, 8, 131088, 262144, 8, 196624, 262144, 8, 262160, 262144, 8, 327696, 262144, 8, 393232, 262144, 8, 458768, 589824, 7, 524304, 720896, 8, 589840, 720896, 8, 655376, 589824, 7, 720912, 589824, 7, 786448, 589824, 7, 851984, 589824, 7, 17, 589824, 7, 65553, 589824, 7, 131089, 720896, 8, 196625, 589824, 7, 262161, 589824, 7, 327697, 262144, 8, 393233, 262144, 8, 458769, 262144, 8, 524305, 262144, 8, 589841, 2031616, 3, 655377, 262144, 8, 720913, 262144, 8, 786449, 1966080, 3, 851985, 262144, 8, 18, 589824, 7, 65554, 589824, 7, 131090, 720896, 8, 196626, 720896, 8, 262162, 720896, 8, 327698, 262144, 8, 393234, 262144, 8, 458770, 262144, 8, 524306, 262144, 8, 589842, 262144, 8, 655378, 262144, 8, 720914, 262144, 8, 786450, 262144, 8, 851986, 262144, 8, 19, 589824, 7, 65555, 589824, 7, 131091, 720896, 8, 196627, 589824, 7, 262163, 589824, 7, 327699, 589824, 7, 393235, 589824, 7, 458771, 720896, 8, 524307, 589824, 7, 589843, 720896, 8, 655379, 589824, 7, 720915, 589824, 7, 786451, 589824, 7, 851987, 589824, 7, 20, 589824, 7, 65556, 720896, 8, 131092, 720896, 8, 196628, 720896, 8, 262164, 720896, 8, 327700, 589824, 7, 393236, 720896, 8, 458772, 589824, 7, 524308, 589824, 7, 589844, 720896, 8, 655380, 589824, 7, 720916, 589824, 7, 786452, 589824, 7, 851988, 589824, 7, 21, 589824, 7, 65557, 720896, 8, 131093, 589824, 7, 196629, 1900544, 2, 262165, 720896, 8, 327701, 589824, 7, 393237, 720896, 8, 458773, 720896, 8, 524309, 589824, 7, 589845, 720896, 8, 655381, 589824, 7, 720917, 589824, 7, 786453, 589824, 7, 851989, 589824, 7, 22, 589824, 7, 65558, 589824, 7, 131094, 589824, 7, 196630, 589824, 7, 262166, 589824, 7, 327702, 589824, 7, 393238, 589824, 7, 458774, 589824, 7, 524310, 589824, 7, 589846, 589824, 7, 655382, 589824, 7, 720918, 589824, 7, 786454, 589824, 7, 851990, 589824, 7, 23, 589824, 7, 65559, 589824, 7, 131095, 589824, 7, 196631, 589824, 7, 262167, 589824, 7, 327703, 589824, 7, 393239, 589824, 7, 458775, 589824, 7, 524311, 589824, 7, 589847, 589824, 7, 655383, 589824, 7, 720919, 589824, 7, 786455, 589824, 7, 851991, 589824, 7, 3, 262144, 8, 5, 589824, 12, 65541, 589824, 12, 131077, 589824, 7, 196613, 589824, 12, 196614, 589824, 12, 196615, 589824, 12, 196616, 589824, 12, 196617, 589824, 12, 196618, 589824, 7, 196619, 262144, 8, 196620, 262144, 8, 327692, 262144, 8, 327691, 262144, 8, 327690, 262144, 8, 327689, 262144, 8, 327688, 262144, 8, 327687, 262144, 8, 327686, 262144, 8, 327685, 262144, 8, 327684, 262144, 8, 327683, 2031616, 3, 262147, 262144, 8, 196611, 2031616, 3, 131075, 262144, 8, 65539, 262144, 8, 917504, 589824, 7, 917505, 589824, 7, 917506, 589824, 7, 917507, 589824, 7, 917508, 589824, 7, 917509, 589824, 7, 917512, 589824, 7, 917513, 589824, 7, 917514, 589824, 7, 917515, 589824, 7, 917516, 589824, 7, 917517, 589824, 7, 917518, 589824, 7, 917519, 589824, 7, 917520, 589824, 7, 917521, 589824, 7, 917522, 589824, 7, 917523, 589824, 7, 917524, 589824, 7, 917525, 589824, 7, 917526, 589824, 7, 917527, 589824, 7, 917511, 589824, 7, 917510, 589824, 7, 917528, 589824, 7, 851992, 589824, 7, 786456, 589824, 7, 720920, 589824, 7, 655384, 589824, 7, 589848, 589824, 7, 524312, 589824, 7, 458776, 589824, 7, 393240, 589824, 7, 327704, 589824, 7, 262168, 589824, 7, 196632, 589824, 7, 131096, 589824, 7, 65560, 589824, 7, 24, 589824, 7, -65512, 589824, 7, -65513, 589824, 7, -65514, 589824, 7, -65515, 589824, 7, -65516, 589824, 7, -65517, 589824, 7, -65518, 589824, 7, -65519, 589824, 7, -65520, 589824, 7, -65521, 589824, 7, -65522, 589824, 7, -65523, 589824, 7, -65524, 589824, 7, -65525, 589824, 7, -65526, 589824, 7, -65527, 589824, 7, -65528, 589824, 7, -65529, 589824, 7, -65530, 589824, 7, -65531, 589824, 7, -65532, 262144, 8, -65533, 262144, 8, -65534, 589824, 7, -65535, 589824, 7, -65536, 589824, 7, -1, 589824, 7, 65535, 589824, 7, 131071, 589824, 7, 196607, 589824, 7, 262143, 589824, 7, 327679, 589824, 7, 393215, 589824, 7, 458751, 589824, 7, 524287, 589824, 7, 589823, 589824, 7, 655359, 589824, 7, 720895, 589824, 7, 786431, 589824, 7, 851967, 589824, 7, 917503, 589824, 7, 983039, 589824, 7)
layer_1/name = "NoTanAbajo"
layer_1/tile_data = PackedInt32Array(851968, 1048576, 25, 851969, 1114112, 25, 851970, 1114112, 25, 851971, 1114112, 25, 851972, 1114112, 25, 851973, 1114112, 25, 851974, 1114112, 25, 851975, 1114112, 25, 851976, 1114112, 25, 851977, 1114112, 25, 851978, 1114112, 25, 851979, 1114112, 25, 851980, 1114112, 25, 851981, 1114112, 25, 851982, 1114112, 25, 851983, 1114112, 25, 851987, 1114112, 25, 851988, 1114112, 25, 851989, 1114112, 25, 851990, 1114112, 25, 851991, 1179648, 25, 786432, 1048576, 24, 0, 1048576, 22, 65536, 1048576, 23, 131072, 1048576, 23, 196608, 1048576, 23, 262144, 1048576, 23, 327680, 1048576, 23, 393216, 1048576, 23, 458752, 1048576, 23, 524288, 1048576, 23, 589824, 1048576, 23, 655360, 1048576, 23, 720896, 1048576, 23, 786455, 1179648, 24, 23, 1179648, 22, 65559, 1179648, 23, 131095, 1179648, 23, 196631, 1179648, 23, 262167, 1179648, 23, 327703, 1179648, 23, 393239, 1179648, 23, 458775, 1179648, 23, 524311, 1179648, 23, 589847, 1179648, 23, 655383, 1179648, 23, 720919, 1179648, 23, -65535, 1114112, 21, 1, 1114112, 22, -65534, 1114112, 21, 2, 1114112, 22, -65530, 1114112, 21, 6, 1114112, 22, -65529, 1114112, 21, 7, 1114112, 22, -65528, 1114112, 21, 8, 1114112, 22, -65527, 1114112, 21, 9, 1114112, 22, -65526, 1114112, 21, 10, 1114112, 22, -65525, 1114112, 21, 11, 1114112, 22, -65524, 1114112, 21, 12, 1114112, 22, -65523, 1114112, 21, 13, 1114112, 22, -65522, 1114112, 21, 14, 1114112, 22, -65521, 1114112, 21, 15, 1114112, 22, -65520, 1114112, 21, 16, 1114112, 22, -65519, 1114112, 21, 17, 1114112, 22, -65518, 1114112, 21, 18, 1114112, 22, -65517, 1114112, 21, 19, 1114112, 22, -65516, 1114112, 21, 20, 1114112, 22, -65515, 1114112, 21, 21, 1114112, 22, -65514, 1114112, 21, 22, 1114112, 22, -65536, 1048576, 21, -65513, 1179648, 21, 786433, 1114112, 24, 786434, 1114112, 24, 786435, 1114112, 24, 786436, 1114112, 24, 786437, 1114112, 24, 786438, 1114112, 24, 786439, 1114112, 24, 786440, 1114112, 24, 786441, 1114112, 24, 786442, 1114112, 24, 786443, 1114112, 24, 786444, 1114112, 24, 786445, 1114112, 24, 786446, 1114112, 24, 786447, 1114112, 24, 786451, 1114112, 24, 786452, 1114112, 24, 786453, 1114112, 24, 786454, 1114112, 24, 3, 0, 46, 65539, 0, 46, 131075, 0, 46, 196611, 0, 46, 262147, 0, 46, 327683, 0, 47, 4, 131072, 46, 65540, 131072, 46, 131076, 131072, 46, 196612, 131072, 46, 327689, 65536, 47, 327688, 65536, 47, 327687, 65536, 47, 327686, 65536, 47, 327685, 65536, 47, 327684, 65536, 47, 262148, 196608, 46, 262149, 65536, 45, 262150, 65536, 45, 262151, 65536, 45, 262152, 65536, 45, 262153, 65536, 45, 262154, 65536, 45, 262155, 262144, 46, 196619, 0, 46, 131083, 0, 46, 65547, 0, 45, 65548, 65536, 45, 65549, 65536, 45, 65550, 65536, 45, 65551, 65536, 45, 65552, 131072, 45, 131088, 131072, 46, 196624, 131072, 46, 262160, 131072, 46, 327690, 65536, 47, 327691, 65536, 47, 327692, 131072, 47, 262156, 131072, 46, 196620, 131072, 46, 131084, 196608, 45, 131085, 65536, 47, 131086, 65536, 47, 131087, 262144, 45, 196623, 0, 46, 262159, 0, 46, 327695, 0, 46, 393231, 0, 47, 393232, 65536, 47, 327696, 196608, 46, 327697, 65536, 45, 327698, 131072, 45, 393234, 131072, 46, 458770, 131072, 46, 393233, 262144, 45, 458769, 0, 46, 524305, 0, 46, 589841, 0, 46, 655377, 0, 46, 524306, 131072, 46, 589842, 131072, 46, 655378, 131072, 46, 720913, 0, 46, 786449, 0, 46, 851985, 0, 46, 720914, 131072, 46, 786450, 131072, 46, 851986, 131072, 46, 851984, 1114112, 25, 786448, 1114112, 24, 5, 1114112, 22, -65531, 1114112, 21, -65533, 0, 46, -65532, 131072, 46)
layer_2/name = "Medio"
layer_2/tile_data = PackedInt32Array(393232, 1245185, 57, 458768, 1245185, 58, 5, 1310721, 21, 65541, 1310721, 22, 6, 1376257, 21, 65542, 1376257, 22, -65535, 1179649, 20, 1, 1179649, 21, 65537, 1179649, 22, -65534, 1245185, 20, 2, 1245185, 21, 65538, 1245185, 22, 196625, 1507329, 19, 262161, 1507329, 20, 196613, 327681, 16, 262149, 327681, 17, 196614, 393217, 16, 262150, 393217, 17, 196615, 458753, 16, 262151, 458753, 17)

[node name="Areas donde girar" type="Node2D" parent="." index="2"]

[node name="Derecha" type="Area2D" parent="Areas donde girar" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas donde girar/Derecha" index="0"]
position = Vector2(199, 248)
rotation = -0.495674
shape = SubResource("RectangleShape2D_jq6s5")

[node name="Arriba" type="Area2D" parent="Areas donde girar" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas donde girar/Arriba" index="0"]
position = Vector2(592.654, 230.303)
rotation = 1.34914
shape = SubResource("RectangleShape2D_jq6s5")

[node name="Derecha2" type="Area2D" parent="Areas donde girar" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas donde girar/Derecha2" index="0"]
position = Vector2(595, 90)
rotation = 0.47822
shape = SubResource("RectangleShape2D_jq6s5")

[node name="Abajo" type="Area2D" parent="Areas donde girar" index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas donde girar/Abajo" index="0"]
position = Vector2(783, 112)
rotation = -1.32994
shape = SubResource("RectangleShape2D_yjulx")

[node name="Derecha3" type="Area2D" parent="Areas donde girar" index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas donde girar/Derecha3" index="0"]
position = Vector2(779, 294)
rotation = -0.411898
shape = SubResource("RectangleShape2D_jq6s5")

[node name="Abajo2" type="Area2D" parent="Areas donde girar" index="5"]
position = Vector2(857, 343)
rotation = -0.144862

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas donde girar/Abajo2" index="0"]
position = Vector2(23.1736, -41.0851)
rotation = -1.12748
shape = SubResource("RectangleShape2D_yjulx")

[node name="Enemigos" type="Node2D" parent="." index="3"]
position = Vector2(192, -91)

[node name="Gallina" parent="Enemigos" index="0" instance=ExtResource("3_308ba")]

[node name="Gallina2" parent="Enemigos" index="1" instance=ExtResource("3_308ba")]
position = Vector2(-9, -21)

[node name="Gallina3" parent="Enemigos" index="2" instance=ExtResource("3_308ba")]
position = Vector2(-9, 32)

[node name="Gallina4" parent="Enemigos" index="3" instance=ExtResource("3_308ba")]
position = Vector2(11, 19)

[node name="Guerreros" type="Node2D" parent="." index="4"]

[node name="Ba√±o Quimico" parent="Guerreros" index="0" instance=ExtResource("5_0bpvy")]
position = Vector2(340, 507)

[node name="Ba√±o Quimico2" parent="Guerreros" index="1" instance=ExtResource("5_0bpvy")]
position = Vector2(98, 507)

[node name="NPCS" type="Node2D" parent="." index="5"]

[node name="Police" parent="NPCS" index="0" instance=ExtResource("2_6x7bv")]
position = Vector2(784, 574)

[node name="Police2" parent="NPCS" index="1" instance=ExtResource("2_6x7bv")]
position = Vector2(943, 574)

[node name="Areas validas para guerreros" type="Node2D" parent="." index="6"]
metadata/_edit_lock_ = true

[node name="AreaValida" parent="Areas validas para guerreros" index="0" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida" index="0"]
position = Vector2(386, 440.5)
shape = SubResource("RectangleShape2D_visar")

[node name="AreaValida2" parent="Areas validas para guerreros" index="1" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida2" index="0"]
position = Vector2(455, 143)
shape = SubResource("RectangleShape2D_0dw2y")

[node name="AreaValida3" parent="Areas validas para guerreros" index="2" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida3" index="0"]
position = Vector2(1009.56, 362.5)
shape = SubResource("RectangleShape2D_ksevg")

[node name="AreaValida4" parent="Areas validas para guerreros" index="3" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida4" index="0"]
position = Vector2(94.25, 227)
shape = SubResource("RectangleShape2D_wx7ke")

[node name="AreaValida5" parent="Areas validas para guerreros" index="4" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida5" index="0"]
position = Vector2(669.813, 266)
shape = SubResource("RectangleShape2D_wx7ke")

[node name="AreaValida6" parent="Areas validas para guerreros" index="5" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida6" index="0"]
position = Vector2(941, 116)
rotation = 1.5708
shape = SubResource("RectangleShape2D_wx7ke")

[node name="AreaValida7" parent="Areas validas para guerreros" index="6" instance=ExtResource("6_adc5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas validas para guerreros/AreaValida7" index="0"]
position = Vector2(744.906, 484)
shape = SubResource("RectangleShape2D_wx7ke")

[node name="Meta" type="Area2D" parent="." index="7"]
position = Vector2(867, 709)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meta" index="0"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_i1oom")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Areas donde girar/Derecha" to="." method="_on_derecha_area_entered"]
[connection signal="area_entered" from="Areas donde girar/Arriba" to="." method="_on_arriba_area_entered"]
[connection signal="area_entered" from="Areas donde girar/Derecha2" to="." method="_on_derecha_area_entered"]
[connection signal="area_entered" from="Areas donde girar/Abajo" to="." method="_on_abajo_area_entered"]
[connection signal="area_entered" from="Areas donde girar/Derecha3" to="." method="_on_derecha_area_entered"]
[connection signal="area_entered" from="Areas donde girar/Abajo2" to="." method="_on_abajo_area_entered"]
[connection signal="area_entered" from="Meta" to="." method="_on_meta_area_entered"]
